# paper-transcriptions3

./: .bazelrc  .editorconfig  .gitattributes  .gitignore  .isort.cfg  .pylintrc  README.adoc  WORKSPACE  WORKSPACE.bazel  defs.bzl  requirements.txt
10.1007@978-3-030-27615-723/: main.tex
10.1007_s002360050048/: BUILD.bazel  main.tex
10.1145_235968.233330/: BUILD.bazel  main.tex
10.1145_3003665.3003674/: main.tex
10.1145_3299869.3300097/: BUILD.bazel  main.tex
10.1145_357401.357402/: main.tex
10.1145_93597.98720/: BUILD.bazel  main.tex
10.14778_2367502.2367518/: main.tex
10.1561_1900000002/: .gitignore  BUILD.bazel  main.tex
A_Brief_History_of_Log_Structured_Merge_Trees/: main.tex
A_Retrospective_on_SEDA/: main.tex
A_Short_History_of_Database_Systems/: main.tex
ConfigureAwait FAQ/: main.tex
Inside_IO_Completion_Ports/: main.tex
MSR-TR-96-18/: main.tex
The Volcano Optimizer Generator/: BUILD.bazel  main.tex
The advantages of an LSM vs a B-Tree/: main.tex
The_Volcano_Optimizer_Generator/: main.tex
archive/: 10.1007_s002360050048.sha512  10.1145_235968.233330.sha512  10.1145_3003665.3003674.sha512  10.1145_3299869.3300097.sha512  10.1145_357401.357402.sha512  10.1145_93597.98720.sha512  10.14778_2367502.2367518.sha512  10.1561_1900000002.sha512  A Brief History of Log Structured Merge Trees.sha512  A Short History of Database Systems.sha512  A_Brief_History_of_Log_Structured_Merge_Trees.sha512  A_Retrospective_on_SEDA.sha512  A_Short_History_of_Database_Systems.sha512  ConfigureAwait FAQ.sha512  ConfigureAwait_FAQ.sha512  Inside_IO_Completion_Ports.sha512  MSR-TR-96-18.sha512  The Volcano Optimizer Generator.sha512  The advantages of an LSM vs a B-Tree.sha512  The_Volcano_Optimizer_Generator.sha512  The_advantages_of_an_LSM_vs_a_B-Tree.sha512  arxiv_1803.04432.sha512  buddy1.sha512  cppreference_memory_order.sha512  mixed_integer_programming.sha512  redbook5.sha512  tspl4-tex.sha512
arxiv_1803.04432/: .gitignore  BUILD.bazel  main.bbl  main.tex
buddy1/: BUILD.bazel  main.tex
chromium_threading/: main.tex
common/: BUILD.bazel  fonts.tex  packages.tex  setup.tex
cppreference_memory_order/: BUILD.bazel  main.tex  main1.tex
executors/: design.tex  main.tex
lock-free-data-structures-with-hazard-po/: main.tex
mixed_integer_programming/: BUILD.bazel  main.tex
openmetrics/: main.tex
opentracing/: main.tex
parquet/: README.md  main.tex
redbook5/: main.tex
safer-cxx/: main.tex
semver/: main.tex
st/: main.tex
tools/: BUILD.bazel  pylint_main.py
tools/updater/: BUILD.bazel  update.py
tspl4-tex/: .gitignore  BUILD.bazel  answers.tex  bibliography.tex  grammar.tex  main.tex  packages.tex  preface.tex  setup.tex  summary.tex  tspl_1.tex
tspl4-tex/body/: binding.tex  control.tex  examples.tex  exceptions.tex  further.tex  intro.tex  io.tex  libraries.tex  objects.tex  records.tex  start.tex  syntax.tex
tspl4-tex/canned/: about.html  about.tex
tspl4-tex/math/: 1.tikz  2.tikz  45.eps  50.tikz  6.tikz  7.tikz
