load("@py3_deps//:requirements.bzl", "requirement")

py_binary(
    name = "isort_main",
    srcs = ["isort_main.py"],
    deps = [
        requirement("isort"),
    ],
)

py_binary(
    name = "yapf_main",
    srcs = ["yapf_main.py"],
    deps = [
        requirement("yapf"),
    ],
)

py_binary(
    name = "pylint_main",
    srcs = ["pylint_main.py"],
    deps = [
        requirement("pylint"),
        requirement("astroid"),
        requirement("lazy-object-proxy"),
        requirement("six"),
        requirement("wrapt"),
        requirement("colorama"),
        requirement("isort"),
        requirement("mccabe"),
    ],
)
