load("//:defs.bzl", "my_latex_gen")

my_latex_gen(
    name = "main",
    main = "main.tex",
    deps = [
        "answers.tex",
        "bibliography.tex",
        "body/binding.tex",
        "body/control.tex",
        "body/examples.tex",
        "body/exceptions.tex",
        "body/further.tex",
        "body/intro.tex",
        "body/io.tex",
        "body/libraries.tex",
        "body/objects.tex",
        "body/records.tex",
        "body/start.tex",
        "body/syntax.tex",
        "canned/about.tex",
        "canned/ch1.png",
        "canned/ch10.png",
        "canned/ch11.png",
        "canned/ch12.png",
        "canned/ch2.png",
        "canned/ch3.png",
        "canned/ch4.png",
        "canned/ch5.png",
        "canned/ch6.png",
        "canned/ch7.png",
        "canned/ch8.png",
        "canned/ch9.png",
        "canned/cover-A4.pdf",
        "canned/jph.png",
        "canned/large-conver.jpg",
        "canned/medium-cover.png",
        "canned/small-cover.png",
        "grammar.tex",
        "packages.tex",
        "preface.tex",
        "setup.tex",
        "summary.tex",
        "tspl_1.tex",
    ] + glob([
        "math/*.gif",
        "math/*.eps",
        "math/*.pdf",
    ]),
)
